# py-cli-template

./: .coveragerc  .gh-alias.yml  .gitconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  Pipfile  README.md  gh-sample  gh_sample.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  gh-login.sh  initializeCommand.sh  postCreateCommand.sh
.github/workflows/: python-app.yml
classes/: gitter.py  lazyload.py
tests/: test_gitter.py
